Extract logic into TextAnalysisService, enable java 15 features in gradle